--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 --index-url https://pypi.python.org/simple/
 
 setuptools
-wikipedia
+# workaround bug https://stackoverflow.com/questions/34869597/wikipedia-api-for-python
+git+https://github.com/lucasdnd/Wikipedia.git
 twython
 pyOpenSSL
 ndg-httpsclient
