Dryrun TIH bot in CI
If environment variable `TIH_DRYRUN` is set to any non-empty value, skip
publication of tweet.

Add a GitHub Actions workflow to dryrun the bot.

--- a/.github/workflows/runbot.yml
+++ b/.github/workflows/runbot.yml
@@ -5,7 +5,7 @@ on:
     - cron: '42 9,21 * * *'
 
 jobs:
-  run-iwpt-bot:
+  run-tih-bot:
     strategy:
       fail-fast: false
       # Linux runner
