--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@
 
 setuptools
 # workaround bug https://stackoverflow.com/questions/34869597/wikipedia-api-for-python
-git+https://github.com/lucasdnd/Wikipedia.git
+#git+https://github.com/lucasdnd/Wikipedia.git
+wikipedia==1.4.0
 tweepy==4.14.0
 pyOpenSSL==23.2.0
 ndg-httpsclient==0.5.1
